crates/paigasus-helikon-providers-gemini/src/translate/snapshots/paigasus_helikon_providers_gemini__translate__snap__snap_generation_config.snap
---
source: crates/paigasus-helikon-providers-gemini/src/translate/mod.rs
expression: body(r)
---
{
  "contents": [
    {
      "parts": [
        {
          "text": "hi"
        }
      ],
      "role": "user"
    }
  ],
  "generationConfig": {
    "maxOutputTokens": 256,
    "temperature": 0.699999988079071,
    "topP": 0.8999999761581421
  }
}
