crates/paigasus-helikon-providers-gemini/src/translate/snapshots/paigasus_helikon_providers_gemini__translate__snap__snap_inline_image.snap
---
source: crates/paigasus-helikon-providers-gemini/src/translate/mod.rs
expression: body(r)
---
{
  "contents": [
    {
      "parts": [
        {
          "text": "what is this"
        },
        {
          "inlineData": {
            "data": "AAAA",
            "mimeType": "image/png"
          }
        }
      ],
      "role": "user"
    }
  ]
}
