crates/paigasus-helikon-providers-gemini/src/translate/snapshots/paigasus_helikon_providers_gemini__translate__snap__snap_plain_text_turn.snap
---
source: crates/paigasus-helikon-providers-gemini/src/translate/mod.rs
expression: body(r)
---
{
  "contents": [
    {
      "parts": [
        {
          "text": "hello"
        }
      ],
      "role": "user"
    }
  ]
}
