crates/paigasus-helikon-providers-gemini/src/translate/snapshots/paigasus_helikon_providers_gemini__translate__snap__snap_tool_declarations_and_choice_auto.snap
---
source: crates/paigasus-helikon-providers-gemini/src/translate/mod.rs
expression: body(r)
---
{
  "contents": [
    {
      "parts": [
        {
          "text": "search"
        }
      ],
      "role": "user"
    }
  ],
  "toolConfig": {
    "functionCallingConfig": {
      "mode": "AUTO"
    }
  },
  "tools": [
    {
      "functionDeclarations": [
        {
          "description": "search",
          "name": "search",
          "parameters": {
            "properties": {
              "q": {
                "type": "string"
              }
            },
            "type": "object"
          }
        }
      ]
    }
  ]
}
