crates/paigasus-helikon-providers-gemini/src/translate/snapshots/paigasus_helikon_providers_gemini__translate__snap__structured_output_plus_tools_errors.snap
---
source: crates/paigasus-helikon-providers-gemini/src/translate/mod.rs
expression: err.to_string()
---
gemini does not support structured output (responseSchema) together with function calling; omit tools / set ToolChoice::None
